2008-02-16  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/Caret.cs,
	  Mono.TextEditor/LineSegment.cs: Caret now remembers it's column when
	  moving up/down.

2008-02-16  Mike Krüger <mkrueger@novell.com> 

	* OblivionStyle.xml, Mono.TextEditor/TextViewMargin.cs: Fixed caret drawing
	  issues.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed ruler drawing.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Corrected ruler posititon.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/FoldMarkerMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/GutterMargin.cs: Refactored text editor.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Keypad control keys now work.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/IBuffer.cs, Mono.TextEditor/GapBuffer.cs,
	  Mono.TextEditor/GutterMargin.cs: Fixed gutter bug & refactored.

2008-02-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/TextUtil.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextMarker.cs,
	  Mono.TextEditor/SelectionMarker.cs,
	  Mono.TextEditor/DocumentUpdateRequest.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/Caret.cs, Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor/DocumentLocation.cs, Mono.TextEditor/GutterMargin.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SemanticRule.cs,