@@ -1,5 +1,9 @@
 2008-02-16  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextViewMargin.cs: Small refactorings.
+
+2008-02-16  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
 	  Mono.TextEditor/Document.cs, Mono.TextEditor/Caret.cs,
 	  Mono.TextEditor/LineSegment.cs: Caret now remembers it's column when
